spade-tests/src/snapshots/spade_tests__integration__trait_tests__method_non_inst_of_entity_errors_nicely.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    entity a(self) -> bool {true}
}

fn t(x: X) -> bool {
    x.a()
}


error: Expected `inst` to instantiate entity
  ┌─ testinput:8:7
  │
4 │     entity a(self) -> bool {true}
  │     ------ a is defined as an entity here
  ·
8 │     x.a()
  │       ^
  │       │
  │       Expected `inst`
  │       Because a is an entity
  │
  = Consider adding `inst`
  │
8 │     x.inst a()
  │       +++++
